DROP TABLE IF EXISTS
    Order_Items, Orders, Products, Business_profiles, Personal_profiles, Users CASCADE;

CREATE TYPE user_role AS ENUM ('ADMIN', 'USER');
CREATE TYPE account_type AS ENUM ('PERSONAL', 'BUSINESS');
CREATE TYPE order_status AS ENUM ('PENDING', 'PAID', 'PROCESSING', 'SHIPPED', 'DELIVERED', 'CANCELLED', 'REFUNDED');

CREATE TABLE Users (
    user_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR NOT NULL UNIQUE,
    password_hash VARCHAR NOT NULL,
    user_role user_role NOT NULL DEFAULT 'USER',
    account_type account_type NOT NULL DEFAULT 'PERSONAL',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT email_format CHECK (email ~* '^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,}$')
);

CREATE TABLE Personal_profiles (
    user_id INTEGER PRIMARY KEY,
    first_name VARCHAR NOT NULL,
    last_name VARCHAR NOT NULL,
    date_of_birth DATE NOT NULL,

    CONSTRAINT date_of_birth_format CHECK (
        date_of_birth <= CURRENT_DATE - INTERVAL '18 years' AND
        date_of_birth >= CURRENT_DATE - INTERVAL '150 years'
    ),
    CONSTRAINT first_name_format CHECK (first_name ~* '^[A-Za-zżźćńółęąśŻŹĆĄŚĘŁÓŃ]+$'),
    CONSTRAINT last_name_format CHECK (last_name ~* '^[A-Za-zżźćńółęąśŻŹĆĄŚĘŁÓŃ \-]+$'),
    FOREIGN KEY (user_id) REFERENCES Users(user_id) ON DELETE CASCADE
);

CREATE TABLE Business_profiles (
    user_id INTEGER PRIMARY KEY,
    company_name VARCHAR NOT NULL,
    nip CHAR(10) NOT NULL,
    address VARCHAR NOT NULL,

    CONSTRAINT company_name_format CHECK (company_name ~* '^[A-Za-z0-9żźćńółęąśŻŹĆĄŚĘŁÓŃ\s.,\-"]+$'),
    CONSTRAINT address_format CHECK (address ~* '^[A-Za-z0-9żźćńółęąśŻŹĆĄŚĘŁÓŃ\s,.\-/]+$'),
    CONSTRAINT nip_format CHECK (nip ~ '^[0-9]{10}$'),
    FOREIGN KEY (user_id) REFERENCES Users(user_id) ON DELETE CASCADE
);

CREATE TABLE Products (
    product_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    seller_id INTEGER NOT NULL,
    name VARCHAR NOT NULL,
    description TEXT,
    price NUMERIC(10, 2) NOT NULL,
    stock_quantity INTEGER NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT price_value CHECK (price >= 0),
    CONSTRAINT stock_quantity_value CHECK (stock_quantity >= 0),
    FOREIGN KEY (seller_id) REFERENCES Users(user_id) ON DELETE CASCADE
);

CREATE TABLE Orders (
    order_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    seller_id INTEGER NOT NULL,
    buyer_id INTEGER NOT NULL,
    amount NUMERIC(10, 2) NOT NULL,
    status order_status NOT NULL DEFAULT 'PENDING',
    delivery_address VARCHAR NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    invoice_requested BOOLEAN NOT NULL DEFAULT FALSE,
    invoice_company_name VARCHAR,
    invoice_nip CHAR(10),
    invoice_address VARCHAR,

    CONSTRAINT amount_value CHECK (amount >= 0),
    CONSTRAINT delivery_address_format CHECK (delivery_address ~* '^[A-Za-z0-9żźćńółęąśŻŹĆĄŚĘŁÓŃ\s,.\-/]+$'),
    CONSTRAINT invoice_company_name_format CHECK (invoice_company_name IS NULL OR invoice_company_name ~* '^[A-Za-z0-9żźćńółęąśŻŹĆĄŚĘŁÓŃ\s.,\-"]+$'),
    CONSTRAINT invoice_address_format CHECK (invoice_address IS NULL OR invoice_address ~* '^[A-Za-z0-9żźćńółęąśŻŹĆĄŚĘŁÓŃ\s,.\-/]+$'),
    CONSTRAINT invoice_nip_format CHECK (invoice_nip IS NULL OR invoice_nip ~ '^[0-9]{10}$'),
    CONSTRAINT invoice_fields_required CHECK (
        (invoice_requested = TRUE AND invoice_company_name IS NOT NULL AND invoice_nip IS NOT NULL AND invoice_address IS NOT NULL) OR
        (invoice_requested = FALSE AND invoice_company_name IS NULL AND invoice_nip IS NULL AND invoice_address IS NULL)
    ),
    FOREIGN KEY (seller_id) REFERENCES Users(user_id) ON DELETE CASCADE,
    FOREIGN KEY (buyer_id) REFERENCES Users(user_id) ON DELETE CASCADE
);

CREATE TABLE Order_Items (
    order_id INTEGER NOT NULL,
    product_id INTEGER NOT NULL,
    quantity INTEGER NOT NULL,
    price_at_purchase NUMERIC(10, 2) NOT NULL,

    CONSTRAINT quantity_value CHECK (quantity > 0),
    CONSTRAINT price_at_purchase_value CHECK (price_at_purchase >= 0),
    PRIMARY KEY (order_id, product_id),
    FOREIGN KEY (order_id) REFERENCES Orders(order_id) ON DELETE CASCADE,
    FOREIGN KEY (product_id) REFERENCES Products(product_id) ON DELETE CASCADE
);
